[package]
name = "ran_intelligence_platform"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "enhanced_neural_swarm_demo"
path = "enhanced_neural_swarm_demo.rs"

[[bin]]
name = "enhanced_neural_swarm_demo_standalone"
path = "enhanced_neural_swarm_demo_standalone.rs"

[[bin]]
name = "epic0_foundation_demo"
path = "src/bin/epic0_foundation_demo.rs"

[[bin]]
name = "epic1_optimization_demo"
path = "src/bin/epic1_optimization_demo.rs"

[[bin]]
name = "epic2_assurance_demo"
path = "src/bin/epic2_assurance_demo.rs"

[[bin]]
name = "epic3_intelligence_demo"
path = "src/bin/epic3_intelligence_demo.rs"

[[bin]]
name = "simple_epic_demo"
path = "src/bin/simple_epic_demo.rs"

[[bin]]
name = "test_all_epics"
path = "src/bin/test_all_epics.rs"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
ndarray = "0.15"
plotters = "0.3"
rayon = "1.7"
num-traits = "0.2"
statrs = "0.16"

[dev-dependencies]
criterion = "0.5"