[workspace]
resolver = "2"
members = [
    "pfs-core",
    "pfs-data", 
    "pfs-feat",
    "pfs-reg",
    "shared/common",
    "shared/proto"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RAN Intelligence Platform Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruv-net/ruv-FANN"
description = "RAN Intelligence Platform - Foundation Services"

[workspace.dependencies]
# Core ruv-FANN integration
ruv-fann = { path = "../../../", features = ["std", "serde", "parallel", "io"] }

# gRPC stack
tonic = "0.12"
prost = "0.13"
tonic-build = "0.12"
prost-types = "0.13"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Data processing
arrow = "53.0"
parquet = "53.0"
polars = { version = "0.35", features = ["lazy", "csv-file", "parquet", "temporal"] }
csv = "1.3"

# Database
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
notify = "6.0"
config = "0.14"
toml = "0.8"
regex = "1.10"
bytes = "1.5"
clap = { version = "4.0", features = ["derive"] }

# Performance and monitoring
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
prometheus = "0.13"
once_cell = "1.19"

# Testing
tempfile = "3.8"
mockall = "0.12"
tokio-test = "0.4"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true