[package]
name = "swarm_demo"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "enhanced_neural_swarm_demo"
path = "enhanced_neural_swarm_demo.rs"

[[bin]]
name = "run_evaluation"
path = "run_evaluation.rs"

[[bin]]
name = "dashboard_server"
path = "dashboard_server.rs"

[[bin]]
name = "simple_dashboard_server"
path = "simple_dashboard_server.rs"

[[bin]]
name = "ran_optimization_example"
path = "ran_optimization_example.rs"

[[bin]]
name = "run_neural_evaluation"
path = "run_neural_evaluation.rs"

[[bin]]
name = "advanced_model_validation"
path = "advanced_model_validation.rs"

[[bin]]
name = "swarm_neural_trainer"
path = "swarm_neural_trainer.rs"

[[bin]]
name = "standalone_neural_trainer"
path = "standalone_neural_trainer.rs"

[[bin]]
name = "fann_data_preprocessing_demo"
path = "fann_data_preprocessing_demo.rs"

[[bin]]
name = "mock_data_replacement_test"
path = "mock_data_replacement_test.rs"

[dependencies]
# Core RAN dependency
ran_intelligence_platform = { path = ".." }

# Basic utilities  
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
rayon = "1.7"
petgraph = "0.6"
ndarray = "0.15"
async-trait = "0.1"
crossbeam = "0.8"