[package]
name = "pfs-data"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PFS-DATA: File-based Data Ingestion Service for RAN Intelligence Platform"

[dependencies]
# Workspace dependencies
platform-foundation-common = { path = "../shared/common" }

# gRPC and async
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Data processing
arrow = { workspace = true }
parquet = { workspace = true }
polars = { workspace = true }
csv = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
notify = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }

# Performance
prometheus = { workspace = true }
once_cell = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
mockall = { workspace = true }
tokio-test = { workspace = true }

[[bench]]
name = "ingestion_benchmark"
harness = false

[[bin]]
name = "pfs-data"
path = "src/bin/server.rs"

[[bin]]
name = "pfs-data-client"
path = "src/bin/client.rs"